--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -6,10 +6,10 @@
 {% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
-
-  {{ block.super }}
-    {% breadcrumb 'Update User' 'users:update' %}
-
+	
+	{{ block.super }}
+	{% breadcrumb 'Update User' 'users:update' %}
+    
 {% endblock %}
 
 
@@ -25,7 +25,7 @@
 		{% endfor %}
 	{% endif %}
 
-	<div class="card">
+	<div class="card mg-b-5m">
 		<div class="card-content">
 			<div class="card-body">
 				<form method="post" action="" enctype="multipart/form-data">
