subiscribe student in course

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -105,8 +105,9 @@
 					                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
 					                {% if user|has_role:'student' or not user.is_staff %}
 					                    <li><a href="{% url 'course:manage' %}">{% trans 'My courses' %}</a></li>
-					                    <li><a href="{% url 'core:guest' %}">{% trans 'All Courses' %}</a></li>
+					                    <li><a href="{% url 'core:all_courses' %}">{% trans 'All Courses' %}</a></li>
 					                {% endif %}
+					                    <li><a href="{% url 'core:guest' %}">{% trans 'Courses' %}</a></li>
 					                {% if user|has_role:'system_admin' %}
 					                    <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
 					                {% endif %}
