--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -24,6 +24,10 @@
                   </ul>
                 </div>
             </div>
+            {% elif user|has_role:'student' %}
+              {% if not request.user in course.students.all %}
+                <a onclick="subscribe($(this), '{% url 'course:subscribe' course.slug %}', {{ course.id}}, '{% trans 'Are you sure you want to subscribe to this course?' %}')"><button class="btn btn-sm btn-primary btn-raised pull-right">{% trans 'Subscribe' %}</button></a>                
+              {% endif %}
             {% endif %}
           </div>
         </div>
