added save message and cancel ones #208

--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -87,10 +87,10 @@
 							</div>
 							{% endfor %}
 							<div class="col-md-offset-2 col-md-6 col-sm-offset-2 col-sm-6 col-xs-6 col-xs-offset-2 col-xs-6">
-								<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
+								<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />	
 							</div>
 							<div class=" col-md-4 col-sm-4 col-xs-4">
-								<a href="{% url 'core:home' %}" class=" btn btn-sm btn-success" >{% trans 'Cancel' %}</a>	
+								<a href="{% url 'core:home' %}" class="  btn btn-danger btn-raised" >{% trans 'Cancel' %}</a>	
 							</div>
 							
 						</form>
