NavbarSearch CSS included [Issue:#233]

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -18,7 +18,10 @@
   overflow: auto;
   width: 300px;
 }
-
+#NavBarSearch{
+    position: absolute;
+    left: 30%;
+  }
 .user-notification-img{
   width:40%;
 }
