--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -33,7 +33,7 @@
 	    <div class="panel-body">
 	        <ul class="nav nav-pills nav-stacked">
 	            <li><a href="javascript:void(0)">{% trans 'Replicate Course' %}</a></li>
-	            <li><a href="{% url 'course:creates' %}">{% trans 'Create Course' %}</a></li>
+	            <li><a href="{% url 'course:create' %}">{% trans 'Create Course' %}</a></li>
 	            <li><a href="{% url 'course:create_cat' %}">{% trans 'Create Category' %}</a></li>
 	        </ul>
 	    </div>
