putign floating button to add course

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -429,3 +429,11 @@ ul, li {
 .nav-pills > li > a {
   border-radius: 0px;
 }
+
+.float-button{
+  float: right;
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  font-size: 20px;
+}
