--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -42,7 +42,6 @@
             </ul>
         </div>
     </div>
-
         {% if user|has_role:'professor' or user|has_role:'system_admin' %}
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -146,6 +145,9 @@
             {% trans 'No courses found' %}
         {% endif %}-->
     </div>
+         {% if user|has_role:'professor' or user|has_role:'system_admin' %}
+            <a href="{% url 'course:create' %}" class="btn btn-primary btn-fab float-button"><i class="fa fa-plus material-icons"></i></a>
+         {% endif %}
         <div class="col-md-12">
         <nav aria-label="Page navigation">
             <ul class="pagination">
