modifying button modal links #205

--- a/links/templates/links/update_link.html
+++ b/links/templates/links/update_link.html
@@ -36,7 +36,7 @@
             {% endif %}
         {% endfor %}
         <div class="form-group">
-          <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Cancel" %}</button>
+          <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Cancel" %}</button>
           <button class="btn btn-raised btn-primary" type="submit">{% trans 'Submit' %}</button>
         </div>
         <!-- .end Card -->
