--- a/links/templates/links/view_link.html
+++ b/links/templates/links/view_link.html
@@ -14,7 +14,7 @@
            <div class="card-block">
               <b class="card-title">{{link.name}}</b><p></p>
               <p class="card-text"> </p><p>{{link.link_description}}</p>
-              <a href="{{ link.link_url }}" class="btn btn-primary">{% trans 'Read more' %}</a>
+              <a href="{{ link.link_url }}" class="btn btn-raised btn-primary">{% trans 'Read more' %}</a>
            </div>
         </article>
         <!-- .end Card -->
