--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -1,5 +1,4 @@
 {% load widget_tweaks i18n %}
-
 <!--MODAL CREATE LINK-->
 <div class="modal fade" id="createLinksModal" tabindex="-1" role="dialog" aria-labelledby="createLink">
   <div class="modal-dialog" role="document">
@@ -33,7 +32,7 @@
           </div>
         {% endfor %}
         <div class="form-group">
-          <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Cancel" %}</button>
+          <button type="button" class="btn btn-raised btn-default " data-dismiss="modal">{% trans "Cancel" %}</button>
           <button class="btn btn-raised btn-primary" type="submit">{% trans 'Submit' %}</button>
         </div>
         <!-- .end Card -->
