--- a/links/templates/links/delete_link.html
+++ b/links/templates/links/delete_link.html
@@ -21,7 +21,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12">
-                                     <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
+                                     <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
                                     <button class="btn btn-raised btn-primary" type="submit">{% trans 'Delete' %}</button>
                                 </div>
                             </div>
