--- a/files/templates/files/delete_file.html
+++ b/files/templates/files/delete_file.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12">
-                                     <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
+                                     <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
                                     <button class="btn btn-raised btn-primary" type="submit">{% trans 'Delete' %}</button>
                                 </div>
                             </div>
@@ -45,7 +45,7 @@
 </div>
 
 {% block script_file %}
-    
+
     {# // <script src="{% static 'js/file.js' %}"></script> #}
     <script type="text/javascript">
       $("#form-delete-file").submit(function(event) {
