Changed icon color [Issue:#233]

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,7 +20,7 @@
 
   	<!-- Bootstrap and themes (material) -->
 	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
-	
+
 	<link rel="stylesheet" type="text/css" href="{% static 'material/css/bootstrap-material-design.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'material/css/ripples.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'material/css/ripples.min.css' %}">
@@ -79,7 +79,7 @@
 											<input type="text" class="form-control" placeholder="{% trans 'Search Files (.pdf, others) and/or activities' %}" name="search"></div>
 												<span class="input-group-btn input-group-sm">
 													<button type="submit" class="btn btn-fab btn-fab-mini">
-														<i class="fa fa-search" aria-hidden="true"></i>
+														<i class="glyphicon glyphicon-search" aria-hidden="true" style="color:#93C741"></i>
 													</button>
 												</span>
 										</div>
