added support for teachers and admins for courses #201

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -420,6 +420,14 @@ ul, li {
 .course, .subject, .topic{ padding-top: 0px; padding-bottom: 0px; }
 .course-detail{padding-top: 10px; padding-bottom: 10px;}
 
+.course-card{
+  margin-bottom: 0.4% !important;
+}
+
+.course-card-group{
+  margin-bottom: 1%;
+}
+
 .category-course-link{
   font-size: 24px;
   color: black !important;
