--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -1,6 +1,6 @@
 {% load static i18n permission_tags %}
 {% load django_bootstrap_breadcrumbs %}
-<div class="group">
+<div class="group  course-card ">
     <div class="panel panel-info">
         <div class="panel-heading course">
           <div class="row">
